@@ -2,6 +2,7 @@
 
 	* Added feature #40058: Date facet renderer (currently not completely implemented)
 	* Added feature #40054: Result document score analyzer
+	* Added feature #40057: Statistics Writer
 
 2012-08-22  Ingo Renner  <ingo.renner@dkd.de>
 
